compiler/kernc_cli/tests/soundness/reject/supertraits/inherited_method_lookup_cannot_collapse_same_trait_with_different_args.rn
// source: inherited method lookup must distinguish the same parent trait instantiated with different generic arguments
// stderr: ambiguous inherited trait method `get`
// stderr: Base[i32]
// stderr: Base[bool]

trait Base[T] {
    fn get() T;
};

trait Left: Base[i32] {};
trait Right: Base[bool] {};
trait Both: Left + Right {};

impl &i32 : Base[i32] {
    fn get() i32 {
        return self.*;
    }
}

impl &i32 : Base[bool] {
    fn get() bool {
        return true;
    }
}

impl &i32 : Left {}
impl &i32 : Right {}
impl &i32 : Both {}

fn main() i32 {
    let value = 3i32;
    let both = (value.& as &Both);
    return both.get();
}
